NIMBUS-248: text wrap issue in grid expanded row card detail

--- a/src/_nm.multigrid.scss
+++ b/src/_nm.multigrid.scss
@@ -15,7 +15,9 @@ ng-component{
     background: $primary-2;
 }
 
-
+.ui-expanded-row-content nm-card-details {
+    width: 100%;
+}
 .ui-expanded-row-content .scrollGrid .ui-datatable-scrollable-body, 
 .ui-expanded-row-content .ui-datatable .ui-datatable-scrollable-body,
 .ui-expanded-row-content .scrollGrid .ui-table-scrollable-body, 
